defined route to get employee by id, documented it and comment a lot of code
