# src/swagger.json
@@ -511,6 +511,40 @@
                     }
                 }
             }
+        },
+        "/api/v1/employee/{employeeId}": {
+            "get": {
+                "tags": [
+                    "Employees"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "employeeId",
+                        "type": "string",
+                        "in": "path"
+                    }
+                ],
+                "description": "Retrive an especific employee",
+                "responses": {
+                    "200": {
+                        "description": "Success retriving the employee"
+                    },
+                    "401": {
+                        "description": "Invalid token or token not provided"
+                    },
+                    "403": {
+                        "description": "User not allowed to perform this action"
+                    },
+                    "500": {
+                        "description": "Unexpected error"
+                    }
+                }
+            }
         }
     }
 }
